[build-system]
requires = ["setuptools>=61.0", "xarray>=2023.9.0", "numpy>=1.26.0", "dask>=2023.9.3", "cupy>=12.2.0"]
build-backend = "setuptools.build_meta"
[project]
name = "cuxrft"
version = "0.0.1"
authors = [
  { name="Tim Vogel", email="tim.vogel@physik.uni-kl.de" },
]
description = "Performs FFTs on xarrays by making use of cuda."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/timvgl/CuXRFT"
Issues = "https://github.com/timvgl/CuXRFT/issues"