[build-system]
requires = ["setuptools>=61.0", "xarray>=2023.1.0", "numpy>=1.24.4", "dask>=2023.5.0", "cupy>=12.2.0"]
build-backend = "setuptools.build_meta"
[project]
name = "cuxrft"
version = "0.0.5"
authors = [
  { name="Tim Vogel", email="tim.vogel@physik.uni-kl.de" },
]
description = "Performs FFTs on xarrays by making use of cuda. Chunking and multiple GPUs in parallel supported."
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://cuxrft.readthedocs.io/en/latest/"
Repository = "https://github.com/timvgl/CuXRFT.git"
Issues = "https://github.com/timvgl/CuXRFT/issues"